tests/transpiler/x/py/group_items_iteration.error
run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/transpiler/x/py/group_items_iteration.py", line 24, in <module>
    for x in g["items"]:
             ~^^^^^^^^^
TypeError: list indices must be integers or slices, not str
